2004-11-09  Werner Koch  <wk@g10code.de>

	* gcrypt.h: Removed 3 trailing commas from enums.  Reported by
	Heiko Stamer.

2004-09-21  Werner Koch  <wk@g10code.de>

	* sexp.c (sexp_sscan): Removed c++ style commets.  Noted by Yoann
	Vandoorselaere.

2004-09-15  Werner Koch  <wk@g10code.de>

	* global.c (gcry_control): Adjusted random into call for the
	changed API in random.c.  Seemed we never compiled the entire
	thing since May.

2004-08-22  Moritz Schulte  <moritz@g10code.com>

	* secmem.c (_gcry_secmem_init): Try to lock pool into core not
	only when running with root privileges.

2004-08-16  Werner Koch  <wk@g10code.de>

	* secmem.c (_gcry_secmem_init): Defer printing of the warning.

2004-08-10  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.h: Include <sys/time.h>, thanks to Simon Josefsson.

2004-04-22  Marcus Brinkmann  <marcus@g10code.de>

	* libgcrypt.m4: Quote first argument to AC_DEFUN.

2004-04-15  Werner Koch  <wk@gnupg.org>

	* secmem.c (_gcry_secmem_malloc_internal): Removed old extra info
	error output.
	(_gcry_secmem_term): Use wipememory2 here.

	* misc.c (_gcry_burn_stack): Use wipememory to avoid optimizations.

	* string.c: Removed.  Was never used.
	* global.c (gcry_strdup): Replaced by the version from string.c
	(gcry_xstrdup): Rewritten.
	* gcrypt.h: Removed duplicate prototype for gcry_strdup.

2004-03-29  Werner Koch  <wk@gnupg.org>

	* secmem.c (_gcry_secmem_realloc): Fixed double unlock; bug
	manifested itself due to the more rigorous checking in the changed
	ath.h

	* libgcrypt-config.in (Options): Ignore the obsolete --threads
	option for now.

2004-03-17  Marcus Brinkmann  <marcus@g10code.de>

	* libgcrypt-config.in (includedir, libdir): Quote'em.  Use
	$gpg_error_cflags and $gpg_error_libs.  Fix construction of
	$includes.

2004-03-14  Marcus Brinkmann  <marcus@g10code.de>

	* libgcrypt-config.in (includedir, libdir): New variables.  For
	--cflags, don't test $cflags.  Also check against /include for the