@@ -28,7 +28,9 @@
 #include <gpg-error.h>
 
 #include <sys/types.h>
+#ifndef _WIN32
 #include <sys/socket.h>
+#endif /*!_WIN32*/
 #include <sys/time.h>
 
 /* This is required for error code compatibility. */
@@ -171,6 +173,15 @@ struct gcry_thread_cbs
   int (*mutex_unlock) (void **priv);
   ssize_t (*read) (int fd, void *buf, size_t nbytes);
   ssize_t (*write) (int fd, const void *buf, size_t nbytes);
+#ifdef _WIN32
+  ssize_t (*select) (int nfd, void *rset, void *wset, void *eset,
+		     struct timeval *timeout);
+  ssize_t (*waitpid) (pid_t pid, int *status, int options);
+  int (*accept) (int s, void  *addr, int *length_ptr);
+  int (*connect) (int s, void *addr, int length);
+  int (*sendmsg) (int s, const void *msg, int flags);
+  int (*recvmsg) (int s, void *msg, int flags);
+#else
   ssize_t (*select) (int nfd, fd_set *rset, fd_set *wset, fd_set *eset,
 		     struct timeval *timeout);
   ssize_t (*waitpid) (pid_t pid, int *status, int options);
@@ -178,6 +189,7 @@ struct gcry_thread_cbs
   int (*connect) (int s, struct sockaddr *addr, socklen_t length);
   int (*sendmsg) (int s, const struct msghdr *msg, int flags);
   int (*recvmsg) (int s, struct msghdr *msg, int flags);
+#endif
 };
 
 #define GCRY_THREAD_OPTION_PTH_IMPL					      \
